--- a/springboot-program/dubbo-provider/pom.xml
+++ b/springboot-program/dubbo-provider/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>dubbo-provider</artifactId>
 
+    <properties>
+        <dubbo-spring-boot>1.0.0</dubbo-spring-boot>
+    </properties>
+
 
     <dependencies>
         <!-- Spring Boot dependencies -->
@@ -29,22 +33,24 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- Spring Boot Dubbo 依赖 -->
         <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>0.2.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-actuator</artifactId>
-            <version>0.2.0</version>
+            <groupId>io.dubbo.springboot</groupId>
+            <artifactId>spring-boot-starter-dubbo</artifactId>
+            <version>${dubbo-spring-boot}</version>
         </dependency>
 
         <dependency>
             <groupId>com.teradata.hadoop</groupId>
             <artifactId>dubbo-api</artifactId>
             <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
