--- a/springboot-program/dubbo-consumer/src/main/resources/application.properties
+++ b/springboot-program/dubbo-consumer/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.port=8081
 
 ## Dubbo 服务消费者配置
 spring.dubbo.application.name=consumer
-spring.dubbo.registry.address=multicast://224.5.6.7:1234
-spring.dubbo.scan=com.github.al.dubbo
+## multicast://224.5.6.7:1234
+spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+spring.dubbo.scan=com.github.al.dubbo.consumer
